--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Burhan-Ahmed/Expense-Tracker.git",
   "name": "expense-tracker",
   "private": true,
   "version": "0.0.0",
