--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "homepage": "https://github.com/Burhan-Ahmed/Expense-Tracker.git",
+  "homepage": "https://Burhan-Ahmed.github.io/Expense-Tracker",
   "name": "expense-tracker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
